revision 11 - 20100525:                                             |
    * Notification when a new program version is available          |
    * Temporary workaround for upstream QTBUG-8914: replaced FTP    |
      download links with HTTP ones                                 |
    * Print group average packet loss and rank in HTML and vB code  |
    * Moved hardcoded download speed test targets to qspeedtest.ini |
    * Updated embedded target list                                  |


revision 10 - 20100524:                                             |
    * Fixed a nasty bug causing massive memory leak and network     |
      usage after the completion of a download speed test           |
    * Build instructions included in the README                     |
    * Split old console in two: "Log messages" and "Test results"   |
    * Checkbox to enable/disable download speed test                |


revision 9 - 20100512:                                              |
    * Source code is now compilable on 64bit Linux hosts            |


revision 8 - 20100512:                                              |
    * Print more detailed OS info for Linux/Unix hosts              |
    * Updated embedded target list                                  |
    * Changed .ini filename to lowercase. IMPORTANT: as a result,   |
      target list updates are now broken for all older revisions    |
    * Removed vBulletin URL tags surrounding host names to stop     |
      Thunderbird scam warnings when receiving notification emails  |
      from the vBulletin forum where a report was posted            |


revision 7 - 20100511:                                              |
    * Added download speed test with 6 concurrent downloads         |


revision 6 - 20100511:                                              |
    * Fixed About box "too small dimensions" bug                    |
    * Instead of adjusting the number of worker threads based on    |